--- a/app/package.json
+++ b/app/package.json
@@ -1,22 +1,81 @@
 {
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.2",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "-": "^0.0.1",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.5.1",
+    "app-loading": "^0.0.51",
+    "assert": "^2.0.0",
+    "atob": "^2.1.2",
+    "aws-sdk": "^2.1012.0",
+    "base-64": "^0.1.0",
+    "base64-arraybuffer": "^1.0.1",
+    "base64-js": "^1.5.1",
+    "crypto": "^1.0.1",
+    "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
+    "expo-av": "~9.1.2",
+    "expo-camera": "~11.0.2",
+    "expo-file-system": "~11.0.2",
+    "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "~9.1.0",
+    "expo-permissions": "~12.0.1",
+    "expo-sqlite": "~9.1.0",
+    "expo-status-bar": "~1.0.4",
+    "filereader": "^0.10.3",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^9.0.0",
+    "moment": "^2.29.1",
+    "nodeify": "^1.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-audio-stream": "^2.6.1",
+    "react-native-aws3": "^0.0.9",
+    "react-native-crypto": "^2.2.0",
+    "react-native-events": "^1.0.18",
+    "react-native-fs": "^2.18.0",
+    "react-native-fs-stream": "^0.0.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-http": "^0.0.3",
+    "react-native-https": "^1.0.0",
+    "react-native-image-picker": "^4.1.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-node": "^3.3.1",
+    "react-native-path": "^0.0.5",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-sound": "^0.11.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "react-tinder-card": "^1.4.3",
+    "react-zlib-js": "^1.0.5",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "rn": "^0.0.1",
+    "rn-nodeify": "^10.3.0",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "postinstall": "node_modules/.bin/rn-nodeify --install crypto,fs,https --hack"
 }
